# plum

./: .gitignore  Cargo.toml  package.dhall
crates/adapter/: Cargo.toml
crates/adapter/src/: lib.rs
crates/cabal/: Cargo.toml
crates/cabal/src/: condition.rs  description.rs  error.rs  eval.rs  interpret.rs  lib.rs  lower.rs  version.rs
crates/cabal/src/syntax/: mod.rs  parser.rs  printer.rs
crates/cache/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: build.rs  main.rs  manifest.rs  style.rs
crates/ghc/: Cargo.toml
crates/ghc/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/hackage/: Cargo.toml
crates/hackage/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: ctx.rs  lib.rs  pvp.rs
crates/orchestrator/: Cargo.toml
crates/resolver/: Cargo.toml
crates/resolver/src/: cache.rs  git.rs  lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/version/: Cargo.toml
crates/version/src/: lib.rs
example/: plum.dhall  plum.kdl
example-lib/: plum.dhall
example-lib/src/: Main.hs
example/src/: Main.hs
