[workspace]
default-members = ["crates/cli"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Gabriel"]
edition = "2024"
repository = "https://github.com/SrGaabriel/plum"
version = "0.1.0"

[workspace.dependencies]
astral-tokio-tar = "0.6"
async-compression = { version = "0.4", features = ["gzip", "tokio"] }
clap = { version = "4.6", features = ["derive"] }
flate2 = "1.1"
futures-util = "0.3"
fxhash = "0.2"
heck = "0.5"
indicatif = "0.18"
miette = { version = "7.6.0", features = ["fancy"] }
lasso = "0.7.3"
num_cpus = "1.17.0"
owo-colors = { version = "4.3", features = ["supports-colors"] }
petgraph = { version = "0.8", features = ["rayon"] }
rayon = "1.12"
reqwest = { version = "0.13.4", features = [
    "http2",
    "json",
    "multipart",
    "stream",
    "zstd",
] }
serde = { version = "1.0", features = ["derive"] }
serde_dhall = { version = "0.13", default-features = false }
serde_json = "1.0"
supports-hyperlinks = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Local
plum-ghc = { path = "crates/ghc" }
plum-hackage = { path = "crates/hackage" }
plum-manifest = { path = "crates/manifest" }

[workspace.lints.clippy]
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
pedantic = { level = "warn", priority = -1 }
return_self_not_must_use = "allow"
