[package]
name = "plum-cabal"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
fxhash.workspace = true
winnow.workspace = true
miette.workspace = true
thiserror.workspace = true
plum-version.workspace = true

[lints]
workspace = true
