[package]
authors.workspace = true
edition.workspace = true
name = "plum-cli"
repository.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
tokio.workspace = true
supports-hyperlinks.workspace = true
plum-ghc.workspace = true
plum-manifest.workspace = true
miette.workspace = true

[lints]
workspace = true
