[package]
authors.workspace = true
edition.workspace = true
name = "plum-ghc"
repository.workspace = true
version.workspace = true

[dependencies]
fxhash.workspace = true
heck.workspace = true
plum-graph.workspace = true
plum-manifest.workspace = true
lasso.workspace = true
thiserror.workspace = true

[lints]
workspace = true
