[package]
name = "plum-graph"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
plum-manifest.workspace = true
fxhash.workspace = true
thiserror.workspace = true
petgraph.workspace = true
lasso.workspace = true

[lints]
workspace = true
