[package]
authors.workspace = true
edition.workspace = true
name = "plum-hackage"
repository.workspace = true
version.workspace = true

[dependencies]
async-compression.workspace = true
astral-tokio-tar.workspace = true
flate2.workspace = true
futures-util.workspace = true
fxhash.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
