[package]
authors.workspace = true
edition.workspace = true
name = "plum-resolver"
repository.workspace = true
version.workspace = true

[dependencies]
astral-tokio-tar.workspace = true
async-compression.workspace = true
dirs.workspace = true
futures-util.workspace = true
fxhash.workspace = true
plum-graph.workspace = true
plum-manifest.workspace = true
reqwest.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
