[package]
authors.workspace = true
edition.workspace = true
name = "plum-scheduler"
repository.workspace = true
version.workspace = true

[dependencies]
flume.workspace = true
plum-graph.workspace = true
plum-manifest.workspace = true
thiserror.workspace = true
fxhash.workspace = true

[lints]
workspace = true
